move some javascript code to maintain a users logged in state

--- a/pipeline_webpage/index.html
+++ b/pipeline_webpage/index.html
@@ -80,5 +80,7 @@
         <button onclick="launch_pipeline()" id="launch_command_button">Launch Pipeline</button>
     </div>
     <img src="img/launch.png" id="launch_img" style="display:none">
+
+    <script type="text/javascript">getCurrentLoggedInSession();</script>
 </body>
 </html>
