--- a/pipeline_webpage/toc.html
+++ b/pipeline_webpage/toc.html
@@ -14,20 +14,22 @@
 </head>
 
 <body>
-<div id='content'>
-<h1 id="pipeline-documentation-draft">Pipeline Documentation Draft</h1>
+<div id='content' class="content">
+    <div class="centered">
+        <h1 id="pipeline-documentation-draft">Pipeline Documentation Draft</h1>
 
-<a href="index.html">Return to Main Menue</a>
+        <a href="index.html">Return to Main Menu</a>
 
-<h2 id="toc">Table of Contents</h2>
-<ul>
-<li><a href="pipeline_summary.html">Pipeline Summary</a></li>
-<li><a href="versioning.html">Software, Data, and Versions</a></li>
-<li><a href="docker_images.html">Docker Images</a></li>
-<li><a href="defaults.html">Program Default Settings</a></li>
-<li><a href="steps.html">Steps</a></li>
-</ul>
-<a href="#">To Top</a>
+        <h2 id="toc">Table of Contents</h2>
+        <ul>
+        <li><a href="pipeline_summary.html">Pipeline Summary</a></li>
+        <li><a href="versioning.html">Software, Data, and Versions</a></li>
+        <li><a href="docker_images.html">Docker Images</a></li>
+        <li><a href="defaults.html">Program Default Settings</a></li>
+        <li><a href="steps.html">Steps</a></li>
+        </ul>
+        <a href="#">To Top</a>
+    </div>
 </div>
 </body>
 </html>
