Fixed submission of sample/panel multiselect

--- a/pipeline_webpage/index.html
+++ b/pipeline_webpage/index.html
@@ -158,7 +158,7 @@
                     <div class="centered" id="germline_command" style="display:none">
                         <table class="germline-table" id="germline_table">
                             <tr>
-                                <th>Variabel</th>
+                                <th>Variable</th>
                                 <th>Value</th>
                                 <th>Return Button</th>
                             </tr>
@@ -166,35 +166,35 @@
                                 <td>Workflow</td>
                                 <td id="workflow_cell"></td>
                                 <td>
-                                    <input type="button" class="table-button" onclick="switchToPipelineView()" value="Select Workflow"/>
+                                    <input type="button" class="table-button" onclick="switchToPipelineView()" value="Change Workflow"/>
                                 </td>
                             </tr>
                             <tr>
                                 <td>Type</td>
                                 <td id="type_cell"></td>
                                 <td>
-                                    <input type="button" class="table-button" onclick="switchToTypeView()" value="Select Type"/>
+                                    <input type="button" class="table-button" onclick="switchToTypeView()" value="Change Type"/>
                                 </td>
                             </tr>
                             <tr>
                                 <td>Run ID</td>
                                 <td id="run_id_cell"></td>
                                 <td>
-                                    <input type="button" class="table-button" onclick="switchToRunIdView()" value="Select Run ID"/>
+                                    <input type="button" class="table-button" onclick="switchToRunIdView()" value="Change Run ID"/>
                                 </td>
                             </tr>
                             <tr>
                                 <td>Single Lane</td>
                                 <td id="lane_cell"></td>
                                 <td>
-                                    <input type="button" class="table-button" onclick="switchToLaneView()" value="Select Lanes"/>
+                                    <input type="button" class="table-button" onclick="switchToLaneView()" value="Change Lanes"/>
                                 </td>
                             </tr>
                             <tr>
                                 <td>Match Pattern</td>
                                 <td id="match_cell"></td>
                                 <td>
-                                    <input type="button" class="table-button" onclick="switchToMatchView()" value="Select Match"/>
+                                    <input type="button" class="table-button" onclick="switchToMatchView()" value="Change Match"/>
                                 </td>
                             </tr>
                         </table>
@@ -202,7 +202,7 @@
                     <div id="multiqc_command" style="display:none">
                         <table class="qc-table" id="multiqc_table">
                             <tr>
-                                <th>Variabel</th>
+                                <th>Variable</th>
                                 <th>Value</th>
                                 <th>Return Button</th>
                             </tr>
@@ -210,14 +210,14 @@
                                 <td>Workflow</td>
                                 <td id="qc_workflow_cell"></td>
                                 <td>
-                                    <input type="button" class="table-button" onclick="switchToPipelineView()" value="Select Workflow"/>
+                                    <input type="button" class="table-button" onclick="switchToPipelineView()" value="Change Workflow"/>
                                 </td>
                             </tr>
                             <tr>
                                 <td>Run ID</td>
                                 <td id="qc_run_id_cell"></td>
                                 <td>
-                                    <input type="button" class="table-button" onclick="switchToRunIdView()" value="Select Run ID"/>
+                                    <input type="button" class="table-button" onclick="switchToRunIdView()" value="Change Run ID"/>
                                 </td>
                             </tr>
                         </table>
